# crossword_generator

./: .gitignore  basic_ops.py  crossword_generator.py  file_ops.py  grid_generator.py  progress.html  pyproject.toml  rutnät.py  table.tex  wordfile.py
korsord/: rutnät.py  test.py  wordfile.py
papper/: package.json  tailwind.config.js
papper/src/: App.vue
papper/src/components/: grid.vue  square.vue
