[tool.poetry]
name = "Korsord"
version = "0.1.0"
description = ""
authors = ["oliver <oliver.nordh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^9.5.1"
parse = "^1.18.0"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
